# ev

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
agents/: agent_primitives.py  composer.py  runner.py
agents/config/eval/: system_prompt.j2
agents/schema/: schema_enforcer.j2
core/: config.py
ev/: cli.py  evaluator.py  improvement.py  versioning.py
ev/agent/: composer.py  runner.py
ev/agent/config/eval/: system_prompt.j2
ev/agents/: runner.py
ev/core/: config.py
ev/schema/: eval_schema.py
ev/utils/: logger.py  model_util.py  pretty.py
evals/test1/: eval.md  schema.py  system_prompt.j2  user_prompt.j2
evals/test1/cases/: case1.json  case2.json
evals/test1/results/04ef170f - 16 Nov 2025 15-31-45/: summary.json
evals/test1/results/736fb8d9 - 16 Nov 2025 20-53-35/: summary.json
evals/test1/versions/: log.json
evals/test2/: eval.md  schema.py  system_prompt.j2
evals/test2/cases/: 1.json  2.json  3.json
evals/test2/versions/: log.json
evals/test2/versions/91b063c5 - 17 Nov 2025 17-54-28/: summary.json  system_prompt.j2  user_prompt.j2
evals/test2/versions/base - 17 Nov 2025 17-54-19/: user_prompt.j2
schema/: eval_schema.py
utils/: logger.py
