[project]
name = "ev"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "typer",
]

# Explicitly tell setuptools where your package is
[tool.setuptools.packages.find]
include = ["ev"]

[project.scripts]
ev = "ev.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
